@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-26T16:36:01Z",
-  "count_outdated" : 844,
-  "uniques_outdated" : 443,
-  "count" : 876,
+  "timestamp" : "2022-10-27T02:16:35Z",
+  "count_outdated" : 846,
+  "uniques_outdated" : 444,
+  "count" : 877,
   "uniques" : 460,
   "clones" : [
-    {
-      "timestamp": "2022-10-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-13T00:00:00Z",
       "count": 2,
