@@ -1,12 +1,7 @@
 {
-  "count": 32,
+  "count": 31,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-10-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-13T00:00:00Z",
       "count": 2,
